# respiratory_sound

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  mypy.ini  noxfile.py  pyproject.toml  whitelist.txt
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
src/respiratory_sound/: 0_explore_dataset.ipynb  0_prepare_dataset.ipynb  1_analysis_subject.ipynb  1_check_time copy.ipynb  1_check_time.ipynb  2_epoching_sound.ipynb  2_epoching_sound_time.ipynb  2_epoching_sound_time_segment.ipynb  2_exploratory_features.ipynb  2_exploratory_subject.ipynb  3_extract_features.ipynb  4_DP_training_DL_model.ipynb  4_SP_training_DL_model copy.ipynb  4_SP_training_DL_model.ipynb  4_SP_training_model copy.ipynb  4_SP_training_model.ipynb  4_SP_training_model_buffer.ipynb  4_disease_pred_benchmark_model.ipynb  4_disease_pred_training_simple.ipynb  4_training_DL_model.ipynb  4_training_simple_model copy.ipynb  4_training_simple_model.ipynb  5_DP_benchmark_model.ipynb  5_benchmark_model.ipynb  5_sound_pred_training_DL_model.ipynb  5_sound_pred_training_simple.ipynb  SP_vizalize_data.ipynb  __init__.py  epoching.py  event_manager.py  extract_features_average.ipynb  main.py  model_prepare.py  model_training.py  processing.py  quality_recordings.ipynb  utils.py
src/type-stubs/: README.rst
tests/: __init__.py  test_main.py  test_respiratory_sound.py
