[tool.poetry]
name = "respiratory_sound"
version = "0.1.0"
description = "This is respiratory_sound"
authors = ["BASTIEN ORSET <bastien.orset@huma.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
safety = "^2.0.0"
mypy = "^0.961"
darglint = "^1.8.1"
xdoctest = "^1.0.1"
Sphinx = "^5.0.2"
black = "^22.6.0"
dlint = "^0.12.0"
Pygments = "^2.12.0"
colorama = "^0.4.5"
nox = "^2022.1.7"
typeguard = "^2.13.3"
pytest-cov = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.7.1"
flake8-bandit = "^3.0.0"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
flake8-simplify = "^0.19.2"
flake8-spellcheck = "^0.28.0"
flake8-functions = "^0.0.7"
flake8-import-order = "^0.18.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-expression-complexity = "^0.0.11"
sphinx-autodoc-typehints = "^1.18.3"
coverage = {version = "^6.4.1", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["respiratory_sound"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.poetry.scripts]
respiratory_sound = "respiratory_sound.main:start"
